syntax = "proto3";

package types;

import "common.proto";
import "task.proto";

service Controller {
    rpc Register (Node) returns (Empty) {
    }
    rpc TaskDone (Task) returns (Task) {
    }
}

message Node {
    string id = 1;
    string address = 2;
}