syntax = "proto3";

package types;

message Task {
    uint32 id = 1;
    string title = 2;
    string description = 3;
    int64 create_time = 4;
    int64 start_time = 5;
    int64 finish_time = 6;
    int64 exit_code = 7;
    string image_repo = 8;
    string image_tag = 9;
    int64 cpus = 10;
    int64 gpus = 11;
    int64 memory = 12;
    string owner_name = 13;
    string owner_qid = 14;
    string owner_email = 15;
    string node = 16;
    string container_id = 17;
    string file_uri = 18;
}

message TaskShortForm {
    uint32 id = 1;
    string title = 2;
    string image_repo = 3;
    string image_tag = 4;
    int64 create_time = 5;
    int64 start_time = 6;
    int64 finish_time = 7;
    int64 exit_code = 8;
    string owner_name = 9;
}

message Tasks {
    repeated TaskShortForm tasks = 1;
}

message Option {
    uint32 limit = 1;
    uint32 offset = 2;
    string owner_name = 3;
}

message Requirement {
    int64 cpus = 1;
    int64 gpus = 2;
    int64 memory = 3;
}